# test-lessons

./: .gitignore  pyproject.toml
tests/: test_capitalize.py
