[tool.poetry]
name = "hexlet-tests-lessons"
version = "0.1.0"
description = ""
authors = ["Alexander Pismenskiy <alex.pismenskiy@gmail.com>"]
readme = "README.md"
packages = [{include = "hexlet_tests_lessons"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
